<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoeViewModel"
            type="com.bash.shoestore.model.ShoeViewModel" />
        <variable
            name="shoeItem"
            type="com.bash.shoestore.model.Shoe" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailConstraintLayout"
        tools:context=".screens.DetailFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoe_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/shoe_name"
            app:layout_constraintBottom_toTopOf="@+id/shoe_name_edittext"
            app:layout_constraintEnd_toEndOf="@+id/shoe_name_edittext"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_edittext" />

        <TextView
            android:id="@+id/company_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/company_name"
            app:layout_constraintBottom_toTopOf="@+id/company_name_edittext"
            app:layout_constraintEnd_toEndOf="@+id/company_name_edittext"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/company_name_edittext" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/shoe_size"
            app:layout_constraintBottom_toTopOf="@+id/shoe_size_edittext"
            app:layout_constraintEnd_toEndOf="@+id/shoe_size_edittext"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_edittext" />


        <TextView
            android:id="@+id/desc_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/description_edittext"
            app:layout_constraintEnd_toEndOf="@+id/description_edittext"
            app:layout_constraintHorizontal_bias="0.007"
            app:layout_constraintStart_toStartOf="@+id/description_edittext" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/ButtonsStyle"
            android:layout_marginTop="12dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_button" />

        <Button
            android:id="@+id/save_button"
            style="@style/ButtonsStyle"
            android:layout_marginTop="136dp"
            android:text="@string/save"
            android:onClick="@{() -> shoeViewModel.onEventSave(shoeItem.name, shoeItem.size, shoeItem.company, shoeItem.description)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_edittext" />

        <EditText
            android:id="@+id/shoe_name_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={shoeItem.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/description_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:text="@={shoeItem.description}"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_name_edittext" />


        <EditText
            android:id="@+id/company_name_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={shoeItem.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_edittext" />


        <EditText
            android:id="@+id/shoe_size_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@={shoeItem.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_edittext" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>